--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,4 +1,10 @@
 pt-BR:
+  activerecord:
+    attributes:
+      user:
+        rf: "RF"
+        password: "Senha"
+        password_confirmation: "Confirmação de senha"
   date:
     abbr_day_names:
     - Dom
